--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Practica 21</h1>
     <p>Hola mundo .............!!!</p>
+    <div><img src="imagenes/logo_oficial.png"></div>
 </body>
 </html>
