--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Practica 21</h1>
     <p>Hola mundo .............!!!</p>
     <div><img src="imagenes/logo_oficial.png"></div>
+    <!--Esto es un comentario-->
+    
 </body>
 </html>
