--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Practica 21</h1>
+    <h2>Evelyn Ximena Lopez Silva</h2>
     <p>Hola mundo .............!!!</p>
     <div><img src="imagenes/logo_oficial.png"></div>
     
